# weather-monitor

./: .gitignore  LICENSE  README.md  settings.json  stack.yaml  weather-monitor.cabal
src/: Main.hs
