name:                weather-monitor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/narrative/weather-monitor#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2017 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable weather-monitor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , dark-sky
                     , directory
                     , either
                     , logging
                     , text
                     , twilio
                     , unordered-containers
                     , vector
